# kube-router-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  conformance-dns.yml  conformance-netpol.yml  conformance-network.yml  conformance-services.yml  conformance.yml  integration-k0s.yml  release.yml
crates/bgp/: Cargo.toml  build.rs
crates/bgp/src/: engine.rs  grpc.rs  lib.rs  path.rs  policy.rs  server.rs
crates/cni/: Cargo.toml
crates/cni/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  ipfamily.rs  lib.rs  naming.rs  sysctl.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  validate.rs
crates/config/tests/: flag_parity.rs
crates/cri/: Cargo.toml  build.rs
crates/cri/proto/runtime/v1/: api.proto
crates/cri/src/: lib.rs
crates/kube-client/: Cargo.toml
crates/kube-client/src/: cache.rs  client.rs  informers.rs  lib.rs  node.rs
crates/kube-router-rs/: Cargo.toml
crates/kube-router-rs/src/: cleanup.rs  lballoc_wire.rs  main.rs  netpol_wire.rs  orchestrate.rs  proxy_wire.rs  routing_wire.rs  svc_vip_wire.rs
crates/lballoc/: Cargo.toml
crates/lballoc/src/: allocate.rs  controller.rs  election.rs  lib.rs  model.rs  pools.rs
crates/netlink-sys/: Cargo.toml
crates/netlink-sys/src/: lib.rs  retry.rs  system.rs
crates/netpol/: Cargo.toml
crates/netpol/src/: controller.rs  ipset.rs  iptables.rs  lib.rs  model.rs  naming.rs  synth.rs  translate.rs
crates/observability/: Cargo.toml
crates/observability/src/: health.rs  http.rs  lib.rs  logging.rs  metrics.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: dsr.rs  firewall.rs  genetlink.rs  graceful.rs  hairpin.rs  ipvs.rs  lib.rs  local_ips.rs  masquerade.rs  model.rs  nodeport_hc.rs  sync.rs  tcpmss.rs  validation.rs
crates/routing/: Cargo.toml
crates/routing/src/: advertise.rs  annotations.rs  bgp_policy.rs  controller.rs  external_peers.rs  inject.rs  lib.rs  overlay.rs  peers.rs  pod_egress.rs  podnet.rs  service_vips.rs
daemonset/: kube-router-rs.yaml
docs/: PARITY.md
e2e/k0s/: Dockerfile.deploy  compose-cluster.yaml  deploy.sh  fetch-gobgp.sh  kube-router-rs-daemonset.yaml  kubeconfig.sh
e2e/kind/: Dockerfile.deploy  README.md  cluster.yaml  deploy.sh  kube-router-rs-daemonset.yaml
integration/: advertisement.sh  dropin.sh  dualstack.sh  lballoc.sh  pod_networking.sh
