[package]
name = "kr-cri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "macros"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
tower = "0.5"
hyper-util = "0.1"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net", "time"] }
