[package]
name = "kr-kube-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
kr-common = { workspace = true }
ipnet = { workspace = true }
kube = { version = "4", default-features = false, features = ["client", "runtime", "rustls-tls"] }
k8s-openapi = { version = "0.28", features = ["latest"] }
tokio = { workspace = true }
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
