[package]
name = "kube-router-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "kube-router-rs"
path = "src/main.rs"

[dependencies]
kr-config = { workspace = true }
kr-common = { workspace = true }
kr-observability = { workspace = true }
kr-kube-client = { workspace = true }
kr-routing = { workspace = true }
kr-bgp = { workspace = true }
kr-cni = { workspace = true }
kr-netlink-sys = { workspace = true }
kr-netpol = { workspace = true }
kr-proxy = { workspace = true }
kr-lballoc = { workspace = true }
ipnet = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
tokio = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
kube = { version = "4", default-features = false, features = ["client", "runtime", "rustls-tls"] }
k8s-openapi = { version = "0.28", features = ["latest"] }

[dev-dependencies]
k8s-openapi = { version = "0.28", features = ["latest"] }
