[package]
name = "kr-lballoc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
ipnet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
