[package]
name = "kr-netlink-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
mock = []

[dependencies]
kr-common = { workspace = true }
tokio = { workspace = true, features = ["process"] }
async-trait = "0.1"
ipnet = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
